# Hilscher-Ethercat-Master

./: .gitmodules  README.md
EtherCAT config&firmware&ESI/ESI/: Beckhoff CUxxxx.xml  Elmo ECAT 00010420 V11.xml
EtherCAT config&firmware&ESI/SYSCON Project/: liberman_humanoid.spj
EtherCAT config&firmware&ESI/cifX/: cifxecm.nxf  cifxecm.nxf_usedlibs.txt
cifx-ros/: .gitignore
cifx-ros/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
cifx-ros/devel/lib/: libcifx.so.2  libcifx.so.2.2.0
cifx-ros/logs/cifx/: build.check.001.log.stderr  build.check.002.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
cifx-ros/logs/cifx_examples/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.002.log.stderr
cifx-ros/src/cifx/: build_install_driver
cifx-ros/src/cifx/cifx_examples/: CMakeLists.txt  package.xml  readme
cifx-ros/src/cifx/cifx_examples/cifXTCPServer/: CMakeLists.txt
cifx-ros/src/cifx/cifx_examples/cifXTestConsole/shared/: CifxConsole_PLCFunctions.cpp
cifx-ros/src/cifx_card/cifx/: CMakeLists.txt
cifx-ros/src/cifx_card/cifx/include/cifx/: cifxlinux.h
cifx-ros/src/cifx_card/cifx/include/cifx/Toolkit/Source/: cifXHWFunctions.h
cifx-ros/src/cifx_card/cifx/include/cifx/netx_tap/: netx_tap.c  netx_tap.h
cifx-ros/src/cifx_card/cifx/src/cifx/: USER_Linux.c
cifx-ros2/: readme.md
cifx-ros2/log/: latest_build
cifx-ros2/src/ethercat_master/cifx_interface/: CMakeLists.txt  package.xml
cifx-ros2/src/ethercat_master/cifx_interface/include/cifx_interface/: EthercatBusBase.hpp  EthercatBusManagerBase.hpp  EthercatSlaveBase.hpp
cifx-ros2/src/ethercat_master/cifx_interface/include/cifx_interface/common/: Macros.hpp  ThreadSleep.hpp
cifx-ros2/src/ethercat_master/cifx_interface/src/cifx_interface/: EthercatBusBase.cpp  EthercatBusManagerBase.cpp  EthercatSlaveBase.cpp
cifx-ros2/src/ethercat_master/cifx_interface/src/cifx_interface/common/: Macros.cpp  ThreadSleep.cpp
cifx-ros2/src/ethercat_master/elmo_ethercat_sdk/: CMakeLists.txt  package.xml
cifx-ros2/src/ethercat_master/elmo_ethercat_sdk/include/elmo_ethercat_sdk/: Command.hpp  Configuration.hpp  Elmo.hpp  Reading.hpp  RxPdo.hpp  TxPdo.hpp
cifx-ros2/src/ethercat_master/elmo_ethercat_sdk/src/elmo_ethercat_sdk/: Command.cpp  Configuration.cpp  ConfigurationParser.cpp  Controlword.cpp  Elmo.cpp  Reading.cpp
cifx-ros2/src/ethercat_master/ethercat_device_configurator/: CMakeLists.txt  README.md  package.xml
cifx-ros2/src/ethercat_master/ethercat_device_configurator/example_config/: setup.yaml
cifx-ros2/src/ethercat_master/ethercat_device_configurator/include/ethercat_device_configurator/: EthercatDeviceConfigurator.hpp
cifx-ros2/src/ethercat_master/ethercat_device_configurator/src/: EthercatDeviceConfigurator.cpp  standalone.cpp
cifx-ros2/src/ethercat_master/ethercat_sdk_master/: CMakeLists.txt  package.xml
cifx-ros2/src/ethercat_master/ethercat_sdk_master/include/ethercat_sdk_master/: EthercatDevice.hpp  EthercatMaster.hpp
cifx-ros2/src/ethercat_master/ethercat_sdk_master/src/ethercat_sdk_master/: EthercatMaster.cpp
cifx-ros2/src/ethercat_master/message_logger/: CMakeLists.txt  package.xml
cifx-ros2/src/ethercat_master/message_logger/include/message_logger/log/: log_messages_ros.hpp
cifx-ros2/src/ethercat_master/soem_interface/soem_interface_examples/: CMakeLists.txt  package.xml
cifx-ros2/src/libertech_messaging/: CMakeLists.txt  package.xml
cifx-ros2/src/libertech_messaging/config/: arm.yaml  arm_left.yaml  arm_right.yaml  humanoid copy.yaml  humanoid.yaml  leg.yaml  setup.yaml
cifx-ros2/src/libertech_messaging/config/device_configurations/: elmo_ankle.yaml  elmo_arm_50.yaml  elmo_arm_70.yaml  elmo_hip_pitch.yaml  elmo_hip_roll.yaml  elmo_hip_yaw.yaml  elmo_knee.yaml
cifx-ros2/src/libertech_messaging/include/libertech_messaging/: HeadInterface.hpp  MotorDMInterface.hpp  elmo_node.h  math_ops.h
cifx-ros2/src/libertech_messaging/launch/: control.launch copy.py  control.launch.py  control_dummy.launch.py  control_hand.launch.py  motor.launch.py
cifx-ros2/src/libertech_messaging/rviz/: real.rviz
cifx-ros2/src/libertech_messaging/scripts/: ethercat_grant.cpp  hybrid_joint_cmd_dynamic_pub.py  joint_state_merge.py  motor_control_node.py  start_elmo_node.sh  test_hybrid_joint_cmd_pub.py
cifx-ros2/src/libertech_messaging/src/: HeadInterface.cpp  demo.cpp  elmo_node copy.cpp  elmo_node.cpp  elmo_test_node.cpp  head_node.cpp  head_node_socketcan.cpp
doc/: cifX50-RE 主站（ECM) 安装与测试步骤.doc
documents/: 操作双端口内存_关于非周期报文.docx
driver/: readme
driver/cifx_m2/: Makefile  ax99100-pci-gpio.c
driver/libcifx/: CMakeLists.txt
driver/uio_netx/: uio_netx.c
examples/: readme
examples/SPISample/: demo_funcs.c
examples/cifXTCPServer/: TCPServer.c
firmware/: config.nxd
original_driver/driver/: build_install_driver
original_driver/examples/: CMakeLists.txt
original_driver/examples/ISASample/: ISASample.c
original_driver/examples/LoadModules/: Cifx_LoadableModules_Start_Only_RCX_CMD.cpp  Cifx_LoadableModules_Start_and_Load_with_CIFX_API.cpp  Cifx_LoadableModules_Start_and_Load_with_RCX_CMD.cpp  ModuleLoader_Public.h  cifXLoadModule.cpp
original_driver/examples/SPISample/: spi_sample.c
original_driver/examples/cifXTCPServer/: .cproject  OS_Includes.h  OS_Specific.c  TCPConnector.c  TCPServer.h  VersionHistory  cifXDownloadHook.c  cifXDownloadHook.h
original_driver/examples/cifXTCPServer/Marshaller/: HilMarshaller.c  MarshallerVersion.h
original_driver/examples/cifXTCPServer/Marshaller/doxygen/: header.html
original_driver/examples/cifXTestConsole/: Main.cpp  OS_Includes.h
original_driver/examples/cifXTestConsole/shared/: CifxConsole_ChannelFunctions.cpp  CifxConsole_Event.cpp  CifxConsole_ExtendedMemoryPointer.cpp  CifxConsole_IO.cpp  CifxConsole_Main.cpp  CifxConsole_MemoryPointer.cpp  CifxConsole_Packet.cpp  CifxConsole_PacketConfig.cpp  CifxConsole_Upload.cpp  TLR_Types.h
original_driver/examples/cifxsample/: cifxlinuxsample.c
(+87 files in other folders)
